# valkyr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  valkyr.sln
example/vkapp/: CMakeLists.txt  main.cpp
example/vtest/: CMakeLists.txt  test_hzptr.h  test_mem.h  test_slab.h  vtest.cpp  vtest.vcxproj  vtest.vcxproj.filters
example/vwin/: Resource.h  vwin.cpp  vwin.rc  vwin.vcxproj  vwin.vcxproj.filters
vcontainer/: ContainerChunkNode.h  FrameGraph.h  MultipleTypeSpan.h  algorithm.h  blob.h  deque.h  graph.h  list.h  map.h  pool.h  queue.h  span.h  stack.h  tuple.h  vec.h
vcore/: array.h  bitop.h  queue.h  vector.h  vhzptr.h  vptr.h  vslab.h
vd3d12rhi/: d3d12rhi.cpp  d3d12rhi.h
vecs/: arch.h  vecs.h
vfg/: cmd.h  fg.h  renderer.h
vfg/dx/: d3d12Renderer.cpp  d3d12Renderer.h  d3d12cmd.cpp  d3d12cmd.h  d3d12fg.h  d3dcore.h
vmalloc/: ChunkMgr.h  MemoryArena.h  ObjectPool.h  Pool.h  chunk.h  ptr.h  vslab.cpp  vslab.h
vrender/: RenderEngine.cpp  RenderEngine.h  RenderGraph.h  RenderTypes.h  Renderer.h  ResBuilder.h  cmd.h
vrender/vk/: Renderer.h  vkCmd.h  vkRenderer.cpp  vkRenderer.h
vrhi/: CommandQueue.h  Device.h  Resource.h  rhi.h
vtask/: RingQueue.h  Scheduler.h  TaskQueue.h  task.h
x64/Release/: vtest.iobj  vtest.ipdb
